# dera

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.html  package-lock.json  package.json  pyproject.toml  search_dataset.py  search_exact_errors.py  vite.config.js
.github/workflows/: python-publish.yml
DERA/sample/.dera/: cache.db  datasets.json  latest_state.json  pipeline.json  project_config.json
DERA/sample/data/: swiggy_customer_data.csv
DERA/sample/graphs/: current_graph.json
backend/: main.py  migrateProjects.js  server.js
backend/dataset/: datasetUtils.js  polars_transforms.py  precompute.py  preprocessDataset.js  previewDataset.js  uploadDataset.js
backend/graphs/: chart_generator.py  chart_styles.py  main.py  validators.py
backend/model/: runPipeline.js  syncProject.js
dera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scratch/: test_migration_v2.js  test_polars_pipeline.js  test_simplified_cache.js  test_upload.js
src/: App.css  App.jsx  index.css
src/components/: CompareWorkspace.jsx  ContextMenu.jsx  Dashboard.jsx  DataLabWorkspace.jsx  LinearRegressionWorkspace.jsx  ProjectModal.jsx
src/components/styles/: datalab-layout.css  datalab-ribbon.css  datalab-sidebars.css  datalab-table.css  datalab-theme.css
src/config/: algorithms.js  modelSchemas.js
