[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dera"
version = "1.0.0"
authors = [
    { name="Samuel Raj Garikimukku" }
]
description = "An open-source, no-code Machine Learning workflow automation tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "polars",
    "python-multipart",
    "xgboost",
    "pyarrow"
]

[project.scripts]
dera = "backend.main:run_gui"

[tool.setuptools]
include-package-data = true
packages = ["backend", "backend.dataset", "backend.graphs"]

[tool.setuptools.package-data]
backend = ["dist/**/*", "dist/*"]